welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:1: error: Missing closing brace `}' assumed here
def in1020(a:Int, b:Int):Boolean = {
^